trunk/NewArchive/0306c51f7251bb1edb6ba6d393ec9bf2-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:14:21: error: cannot bind 'std::ostream {aka std::basic_ostream<char>}' lvalue to 'std::basic_ostream<char>&&'
     std::cout << v[0] << " " << v[1] ;
                     ^
In file included from /usr/local/include/c++/4.8.0/iostream:39:0,
                 from main.cpp:1:
/usr/local/include/c++/4.8.0/ostream:602:5: error:   initializing argument 1 of 'std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&&, const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = boost::any]'
     operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
     ^
